--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@
 				<artifactId>pagehelper-spring-boot-starter</artifactId>
 				<version>2.1.0</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-devtools</artifactId>
+				<scope>runtime</scope>
+				<optional>true</optional>
+			</dependency>
+
 		</dependencies>
 
 	<build>
