add:新增驗證參數的 dependency 並修改 ProductRequest

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 				<optional>true</optional>
 			</dependency>
 
+<!--			驗證參數-->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-validation</artifactId>
+			</dependency>
+
 		</dependencies>
 
 	<build>
