--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.profiles.active=local
 
-spring.application.name=
-server.address=
-server.port=
+# spring.application.name=
+# server.address=
+# server.port=
 
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+# spring.datasource.url=
+# spring.datasource.username=
+# spring.datasource.password=
 
-mybatis-plus.mapper-locations=
+# mybatis-plus.mapper-locations=
